--- a/conf/dovecot-mailboxes.conf
+++ b/conf/dovecot-mailboxes.conf
@@ -32,6 +32,7 @@ namespace inbox {
   mailbox Spam {
     special_use = \Junk
     auto = subscribe
+    autoexpunge = 30d
   }
   mailbox Drafts {
     special_use = \Drafts
@@ -44,6 +45,7 @@ namespace inbox {
   mailbox Trash {
     special_use = \Trash
     auto = subscribe
+    autoexpunge = 60d
   }
   mailbox Archive {
     special_use = \Archive
@@ -59,5 +61,7 @@ namespace inbox {
   }
   mailbox Junk {
     special_use = \Junk
+    autoexpunge = 30d
   }
 }
+
